<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.quizsamurai.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:focusableInTouchMode="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_1"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/customFontStyle"
            android:textColor="@android:color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/question_1_answer"
            android:inputType="textNoSuggestions"
            style="@style/customFontStyle"
            android:maxLength="16"
            android:id="@+id/question_1_answer"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_2"
            android:layout_marginLeft="16dp"
            style="@style/customFontStyle"
            android:layout_marginRight="16dp"
            android:textColor="@android:color/black"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/question_2_check_a"
            style="@style/customFontStyle"
            android:paddingLeft="2dp"
            android:id="@+id/question_2_check_a"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/question_2_check_b"
            style="@style/customFontStyle"
            android:paddingLeft="2dp"
            android:id="@+id/question_2_check_b"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/question_2_check_c"
            style="@style/customFontStyle"
            android:paddingLeft="2dp"
            android:id="@+id/question_2_check_c" />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/question_2_check_d"
            style="@style/customFontStyle"
            android:paddingLeft="2dp"
            android:id="@+id/question_2_check_d"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_3"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/customFontStyle"
            android:textColor="@android:color/black"/>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/question_3_radiogroup">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/question_3_radiobutton_a"
                        android:id="@+id/question_3_radiobutton_a"/>
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/question_3_radiobutton_b"
                        android:id="@+id/question_3_radiobutton_b"/>
                </RadioGroup>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/question_4_img"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:scaleType="centerCrop"
            android:layout_marginBottom="16dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_4"
            style="@style/customFontStyle"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@android:color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/question_4_answer"
            android:inputType="textNoSuggestions"
            style="@style/customFontStyle"
            android:maxLength="16"
            android:id="@+id/question_4_answer"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_5"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/customFontStyle"
            android:textColor="@android:color/black"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/question_5_radiogroup">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question_5_radiobutton_a"
                android:id="@+id/question_5_radiobutton_a"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question_5_radiobutton_b"
                android:layout_toRightOf="@id/question_5_radiobutton_a"
                android:id="@+id/question_5_radiobutton_b"
                />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_6"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/customFontStyle"
            android:textColor="@android:color/black"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/question_6_answer"
            android:inputType="textNoSuggestions"
            style="@style/customFontStyle"
            android:maxLength="16"
            android:id="@+id/question_6_answer"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="122dp"
            android:src="@drawable/question_7_img"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:scaleType="centerCrop"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_7"
            style="@style/customFontStyle"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textColor="@android:color/black"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question_7_check_a"
                style="@style/customFontStyle"
                android:paddingLeft="2dp"
                android:id="@+id/question_7_check_a"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question_7_check_b"
                style="@style/customFontStyle"
                android:paddingLeft="2dp"
                android:id="@+id/question_7_check_b"
                android:layout_below="@id/question_7_check_a"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question_7_check_c"
                style="@style/customFontStyle"
                android:paddingLeft="2dp"
                android:id="@+id/question_7_check_c"
                android:layout_toRightOf="@id/question_7_check_b"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question_7_check_d"
                style="@style/customFontStyle"
                android:paddingLeft="2dp"
                android:id="@+id/question_7_check_d"
                android:layout_below="@id/question_7_check_c"
                android:layout_toRightOf="@id/question_7_check_b"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_8"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="@style/customFontStyle"
            android:textColor="@android:color/black"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/question_8_radiogroup">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question_8_radiobutton_a"
                android:id="@+id/question_8_radiobutton_a"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/question_8_radiobutton_b"
                android:layout_toRightOf="@id/question_8_radiobutton_a"
                android:id="@+id/question_8_radiobutton_b"
                />
        </RadioGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:background="@android:color/darker_gray"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_button"
                style="@style/customFontStyle"
                android:layout_marginBottom="16dp"
                android:layout_centerInParent="true"
                android:background="@color/colorAccent"
                android:textColor="@android:color/white"
                android:onClick="computeScore"/>
        </RelativeLayout>

    </LinearLayout>

</ScrollView>
